# Birdnest

./: .env  .gitignore  README.md  app.py  pyproject.toml
src/: config.py  routes.py
src/services/: drone_service.py  pilot_service.py
static/: update.js
templates/: index.html  section.html
