[tool.poetry]
name = "birdnest"
version = "0.1.0"
description = ""
authors = ["Tuomas Marenk <tuomas.marenk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
requests = "^2.28.2"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
